[tool.poetry]
name = "keras-mdn-layer"
version = "0.4.4"
description = "An MDN Layer for Keras using TensorFlow's distributions module"
authors = ["Charles Martin <cpm@charlesmartin.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cpmpercussion/keras-mdn-layer"
repository = "https://github.com/cpmpercussion/keras-mdn-layer"
keywords = ["mixture density layer", "neural network", "machine learning"]
classifiers = ['Topic :: Scientific/Engineering :: Artificial Intelligence']

[tool.poetry.dependencies]
python = "3.11.*"
numpy = ">=1.22,<1.27"
tensorflow-probability = [
  {platform = "win32", version = "~=0.21.0"},
  {version = ">=0.21.0,<=0.23.0"}
]
# FIXME: This weirdly causes an error, fix
# tensorflow-macos = {markers="sys_platform == 'darwin' and platform_machine == 'arm64'", version = ">=2.13.0,<2.16.0"}
tensorflow = [
  {markers="sys_platform == 'darwin' and platform_machine == 'x86_64'", version = ">=2.13.0,<2.16.0"},
  {markers="sys_platform == 'linux' and platform_machine == 'x86_64'", version = ">=2.13.0,<2.16.0"},
  {platform = "win32", version = "~=2.13.0"},
  {platform = "win32", version = ">=2.13.0,<2.16.0"}
]
tensorflow-io-gcs-filesystem = [
    {markers="sys_platform != 'win32'", version = ">= 0.23.1"},
    {markers="sys_platform == 'win32'", version = ">= 0.23.1,< 0.32.0"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
ipympl = "^0.9.4"
pandas = "^2.2.2"
svgwrite = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
